fixing styles so the google logo is visible

--- a/app/assets/stylesheets/ama_layout/layout_components/banners.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/banners.scss
@@ -80,4 +80,11 @@
       color: $white;
     }
   }
+
+  &--pushed-fixed{
+    left: 300px;
+    width: calc(100% - 300px);
+    position: fixed;
+    z-index: 1;
+  }
 }
