--- a/app/assets/stylesheets/ama_layout/layout_components/buttons.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/buttons.scss
@@ -111,8 +111,10 @@ button[disabled],
 
   &--fixed{
     @extend .button-toggle;
-    position: relative;
-    top: 20px
+    position: fixed;
+    top: 70px;
+    width: 95%;
+    left: 2.5%;
   }
 
   &__option{
