--- a/app/assets/stylesheets/ama_layout/layout_components/maps.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/maps.scss
@@ -1,21 +1,21 @@
 .map-full-page{
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: calc(100vh - 53px);
 
   &__location-icon{
     position: fixed;
     left: 10px;
-    bottom: 10px;
+    bottom: 30px;
     z-index: 5;
     cursor: pointer;
     display: none;
 
     @include breakpoint(small down){
-      bottom: 137px;
+      bottom: 155px;
     }
   }
 }
