--- a/app/assets/stylesheets/ama_layout/layout_components/side_nav.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/side_nav.scss
@@ -67,6 +67,6 @@
 .side-nav-overlay{
   @extend .side-nav;
   z-index: 1000;
-  position: relative;
+  position: absolute;
   min-width: 300px;
 }
